--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="%PUBLIC_URL%/ARI1.jpg" />
+    <link rel="icon" href="%PUBLIC_URL%/favIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
 
-    <title>ARIbiotech</title>
+    <title>MARINE-eSOUK-WASTE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
